--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2013-12-13  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - shogi_server/league/floodgate_thread.rb:
+	    - Added a log message.
+
 2013-12-08  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
