[webserver] - Listen on only IPv4 explicitly.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+2013-12-15  Daigo Moriwaki <daigo at debian dot org>
+
+	* [webserver]
+	  - Listen on only IPv4 explicitly. Under ruby 1.9.3p194, without
+	    any bind addresses, ruby attempts to listen on both "0.0.0.0"
+	    and "::". Specifying "::" on Linux leads to listen on both IPv4
+	    and IPv6, which results in a warning message saying "Address
+	    already in use - bind(2)".
+
 2013-12-13  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
