--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2013-12-26  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - Previously, parameters in Floodgate time configuration file were
+	    not applied to actual instances. This issue has been fixed.
+
 2013-12-21  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
