--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+2014-01-07  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - Released: Revision "20140107"
+
 2013-12-29  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
