--- a/changelog
+++ b/changelog
@@ -12,6 +12,11 @@
 	    - A new log summary type, "max_moves_draw", has been assigned for games
 	      drawing with max moves.
 	      'summary:max_moves_draw:name_sente draw:name_gote draw
+	  - Least time per move:
+	    - New command line option: --least-time-per-move n
+	      This opotion specifies a least time in second per move, which
+	      was previously 1 sec but is now by default 1, meaning that a
+	      decimal fraction of time for a move will be truncated.
 
 2014-07-19  Daigo Moriwaki <daigo at debian dot org>
 
