--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2014-11-24  Daigo Moriwaki <daigo at debian dot org>
+
+	* Ruby 2.0:
+	  - Ruby 2.0.0 or later is recommended to use with shogi-server
+	    since Ruby 1.8 reached its End-of-Life on the end of July, 2014.
+
 2014-07-19  Daigo Moriwaki <daigo at debian dot org>
 
 	* [mk_rate]
