--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2014-12-18  Daigo Moriwaki <daigo at debian dot org>
+
+	* utils/eval_graph.rb:
+	  - Gnuplot 4.6.6 drew evaluation-value lines with a dashed style.
+	    This issue has now been addressed so that solid lines are used.
+
 2014-11-24  Daigo Moriwaki <daigo at debian dot org>
 
 	* Ruby 2.0:
