--- a/changelog
+++ b/changelog
@@ -21,8 +21,8 @@
 	  - Least time per move:
 	    - New command line option: --least-time-per-move n
 	      This opotion specifies a least time in second per move, which
-	      was previously 1 sec but is now by default 1, meaning that a
-	      decimal fraction of time for a move will be truncated.
+	      is 1 second by default. Setting 0 means that a decimal
+	      fraction of time for a move will be truncated.
 
 2014-07-19  Daigo Moriwaki <daigo at debian dot org>
 
