Update various documentations

--- a/changelog
+++ b/changelog
@@ -10,19 +10,23 @@
 	  - New feature: max moves
 	    - New command line option: --max-moves n
 	      When a game with the n-th move played does not end, make the
-	      game a draw (default 256). 0 disables this feature.
-	    - Players will receive a new message, "#MAX_MOVES_DRAW",  upon
-	      an end of such a game:
-	        #MAX_MOVES_DRAW
-	        #DRAW
-	    - A new log summary type, "max_moves_draw", has been assigned for games
+	      game a draw (default 256 in compliance with CSA Protocol V1.2
+	      or later).  Setting 0 disables this feature for
+	      CSA Protocol V1.1.2 or before.
+	    - Players will receive a new message, "#MAX_MOVES", upon an end
+	      of such a game:
+	        #MAX_MOVES
+	        #CENSORED
+	    - A new log summary type, "max_moves", has been assigned for games
 	      drawing with max moves.
-	      'summary:max_moves_draw:name_sente draw:name_gote draw
+	      'summary:max_moves:name_sente draw:name_gote draw
 	  - Least time per move:
 	    - New command line option: --least-time-per-move n
-	      This opotion specifies a least time in second per move, which
-	      is 1 second by default. Setting 0 means that a decimal
-	      fraction of time for a move will be truncated.
+	      This option specifies a least time in second per move, which
+	      is 0 second by default, meaning that a decimal
+	      fraction of time for a move will be truncated in compliance
+	      with CSA Protocol V1.2 or later.
+	      Set 1 for CSA Protocol V1.1.2 or before.
 
 2014-07-19  Daigo Moriwaki <daigo at debian dot org>
 
