--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+2015-01-17  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - shogi-server, shogi_server/{command,game_result,player}.rb:
+	    The change at 2014-10-13 was not worked as expected. Reworked.
+	    A player, attempting to login with the current live player
+	    stalling for more than a day, can forcibly override the current
+	    player.
+
 2015-01-12  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
