Fix #35795: A time consumed could be -1
* [shogi-server] shogi_server/time_clock.rb:
  - A time consumed could be -1.
    * The start time of a move is captured after sending a move to a
      player of the next turn at the end of the giant lock
    * The end time of the move is captured at the exact time when the
      server receives it before the giant lock
    Therefore, end_time < start_time is possible when a player returns a
    move instantly.
    Thanks to Tomoyuki Kaneko for reporting this issue.
    (Closes: #35795)

--- a/changelog
+++ b/changelog
@@ -1,3 +1,16 @@
+2015-11-27  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server] shogi_server/time_clock.rb:
+	  - A time consumed could be -1.
+	    * The start time of a move is captured after sending a move to a
+	      player of the next turn at the end of the giant lock
+	    * The end time of the move is captured at the exact time when the
+	      server receives it before the giant lock
+	    Therefore, end_time < start_time is possible when a player returns a
+	    move instantly.
+	    Thanks to Tomoyuki Kaneko for reporting this issue.
+	    (Closes: #35795)
+
 2015-02-14  Daigo Moriwaki <daigo at debian dot org>
 
 	* util/statistics.rb:
