--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@
 
 	* utils/eval_graph.rb
 	  - Support Fischer time control.
+	* [shogi-server] Bump up the revision to 20160409.
 
 2016-04-02  Daigo Moriwaki <daigo at debian dot org>
 
